--- a/manifest.json
+++ b/manifest.json
@@ -13,7 +13,8 @@
       "sizes": "512x512"
     }
   ],
-  "start_url": ".",
+  "start_url": "https://johnson-darko.github.io/tapgas/#/",
+  "scope": "https://johnson-darko.github.io/tapgas/",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#0f172a",
