--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,39 +1,22 @@
 {
-  "name": "TapGas",
   "short_name": "TapGas",
-  "description": "Order LPG cylinders, track deliveries, and manage your profile. Offline-first PWA.",
-  "start_url": ".",
-  "display": "standalone",
-  "background_color": "#ffffff",
-  "theme_color": "#3b82f6",
-  "orientation": "portrait-primary",
-  "scope": "https://johnson-darko.github.io/tapgas/",
-  "categories": ["education", "reference", "productivity"],
-  "lang": "en",
+  "name": "TapGas - Uber-for-Gas PWA",
   "icons": [
     {
-      "src": "icon-192.png",
-      "sizes": "192x192",
-      "type": "image/png"
+      "src": "icons/icon-192x192.png",
+      "type": "image/png",
+      "sizes": "192x192"
     },
     {
-      "src": "icon-512.png",
-      "sizes": "512x512",
-      "type": "image/png"
+      "src": "icons/icon-512x512.png",
+      "type": "image/png",
+      "sizes": "512x512"
     }
   ],
-  "screenshots": [
-    {
-      "src": "screenshot-mobile.png",
-      "sizes": "390x844",
-      "type": "image/png",
-      "form_factor": "narrow"
-    },
-    {
-      "src": "screenshot-desktop.png",
-      "sizes": "1280x800",
-      "type": "image/png",
-      "form_factor": "wide"
-    }
-  ]
+  "start_url": "https://johnson-darko.github.io/tapgas/#/",
+  "scope": "https://johnson-darko.github.io/tapgas/",
+  "display": "standalone",
+  "background_color": "#ffffff",
+  "theme_color": "#0f172a",
+  "description": "Order LPG cylinders, track deliveries, and manage your profile. Offline-first PWA."
 }
