--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "TapGas",
-  "name": "TapGas - Uber-for-Gas PWA",
+  "short_name": "GASMAN",
+  "name": "GASMAN",
   "icons": [
     {
       "src": "icons/icon-192x192.png",
