done modal receipt

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@capacitor/local-notifications": "^7.0.3",
     "@capacitor/splash-screen": "^7.0.3",
     "chart.js": "^4.5.0",
+    "html2canvas": "^1.4.1",
     "leaflet": "^1.9.4",
     "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
